# specs/swagger.yaml
@@ -2,6 +2,8 @@ openapi: 3.0.0
 info:
   version: 1.0.0
   title: Muisti API
+security:
+  - bearerAuth: []
 paths:
 
   /exhibitions:
@@ -219,6 +221,12 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+
   schemas:
     Exhibition:
       type: object
